...
  // Widget to build the grid for displaying GIFs
  Widget _buildGifGrid() {
    return Expanded(
      child: gifs.isEmpty
          ? const Center(
              child:
                  Text('No GIFs found')) // Show a message if no GIFs are found
          : GridView.builder(
              gridDelegate: const SliverGridDelegateWithFixedCrossAxisCount(
                crossAxisCount: 2, // Set the number of columns in the grid
              ),
              itemCount: gifs.length, // Set the number of items in the grid
              itemBuilder: (context, index) {
...
